--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body{
     flex-wrap: wrap;
     border: 1px solid black;
     justify-content: center;
+    background-color: black;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .container-num{
@@ -29,15 +32,28 @@ body{
 }
 
 .display{
-    width: 400px;
-    height: 100px;
-    border: 1px solid black;
     display: flex;
+    flex-direction: column;
+    width: 400px;
+    height: 150px;
+    border: 1px solid black;
+    text-align: end;
     justify-content: center;
-    align-items: center;
+    padding-right: 25px;
     box-sizing: border-box;
     background-color: rgba(172, 255, 47, 0.733);
     font-weight: bold;
+    font-size: 24px;
+    gap: 25px;
+}
+
+.l2{
+    font-size: 45px;
+    margin: 0px;
+}
+
+.l1{
+    margin: 0px;
 }
 
 .btn{
@@ -48,8 +64,9 @@ body{
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
-    font-weight: bold;
-    background-color: rgba(128, 128, 128, 0.377);
+    font-weight: bolder;
+    background-color: rgb(128, 128, 128);
+    border-radius: 5px;
 }
 
 #C, #AC{
@@ -57,5 +74,6 @@ body{
 }
 
 .operators{
-    background-color: rgba(27, 27, 27, 0.377);
+    background-color: rgb(88, 88, 88);
+    font-size: 35px;
 }
